syntax="proto3";

option go_package = "github.com/ZhengjunHUO/go-playground/protobuf/protob";

package protob;

message K8sInfo {
    string name = 1;
    int32 size = 2;
    bool ismanaged = 3;
    Cni cni = 4;
}

message Cni {
    string name = 1;
    bool isOverlayed = 2;
    bool isDirectRouting = 3;
}

message Requete {
    string id = 1;
}

service Getter {
    rpc ShowK8s (Requete) returns (K8sInfo) {}
}
